# all_querier

./: .aiignore  .gitignore  Cargo.toml
allq-anilist/: Cargo.toml
allq-anilist/src/: lib.rs  oauth2.rs
allq-cli/: Cargo.toml
allq-cli/src/: main.rs
allq-core/: Cargo.toml  build.rs
allq-core/src/: cache.rs  dispatcher.rs  lib.rs
allq-igdb/: .openapi-generator-ignore  Cargo.toml  IGDB-OpenAPI.yaml  README.md  config.yaml  issues.md  options
allq-igdb/.openapi-generator/: FILES
allq-igdb/docs/: AgeRating.md  AgeRatingCategory.md  AgeRatingCategoryEnums.md  AgeRatingContentDescription.md  AgeRatingContentDescriptionCategoryEnums.md  AgeRatingContentDescriptionV2.md  AgeRatingEnums.md  AgeRatingOrganization.md  AlternativeNames.md  Artwork.md  ArtworkTypes.md  ChangeDateCategoryEnum.md  Character.md  CharacterGender.md  CharacterGenderEnum.md  CharacterMugShot.md  CharacterSpecies.md  CharacterSpeciesEnum.md  Collection.md  CollectionMembership.md  CollectionMembershipType.md  CollectionRelation.md  CollectionRelationType.md  CollectionType.md  Company.md  CompanyLogo.md  CompanyWebsite.md  CompanyWebsiteEnums.md  Cover.md  DateFormat.md  EndpointsApi.md  Event.md  EventLogo.md  EventNetwork.md  ExternalGame.md  ExternalGameCategoryEnums.md  ExternalGameMediaEnums.md  ExternalGameSource.md  Franchise.md  GameCategoryEnums.md  (+58 more)
allq-igdb/src/: lib.rs
allq-igdb/src/apis/: configuration.rs  endpoints_api.rs  mod.rs
allq-igdb/src/models/: age_rating.rs  age_rating_category.rs  age_rating_category_enums.rs  age_rating_content_description.rs  age_rating_content_description_category_enums.rs  age_rating_content_description_v2.rs  age_rating_enums.rs  age_rating_organization.rs  alternative_names.rs  artwork.rs  artwork_types.rs  change_date_category_enum.rs  character.rs  character_gender.rs  character_gender_enum.rs  character_mug_shot.rs  character_species.rs  character_species_enum.rs  collection.rs  collection_membership.rs  collection_membership_type.rs  collection_relation.rs  collection_relation_type.rs  collection_type.rs  company.rs  company_logo.rs  company_website.rs  company_website_enums.rs  cover.rs  date_format.rs  event.rs  event_logo.rs  event_network.rs  external_game.rs  external_game_category_enums.rs  external_game_media_enums.rs  external_game_source.rs  franchise.rs  game_category_enums.rs  game_engine.rs  (+58 more)
allq-itis/: Cargo.toml
allq-itis/src/: lib.rs  queries.rs
allq-jikan/: Cargo.toml
allq-jikan/src/: lib.rs
allq-mal/: Cargo.toml
allq-mal/src/: lib.rs
allq-musicbrainz/: Cargo.toml
allq-musicbrainz/src/: lib.rs
allq-pcgw/: Cargo.toml
allq-pcgw/src/: lib.rs
allq-providers/: Cargo.toml  build.rs
allq-providers/src/: itis.rs  lib.rs  mal.rs  mywaifulist.rs  pcgw.rs
allq-query/: Cargo.toml
allq-query/src/: fetch_args.rs  lib.rs
allq-rawg/: .openapi-generator-ignore  Cargo.toml  README.md
allq-rawg/.openapi-generator/: FILES
allq-rawg/docs/: CreatorRolesApi.md  CreatorRolesList200Response.md  CreatorsApi.md  CreatorsList200Response.md  Developer.md  DeveloperSingle.md  DevelopersApi.md  DevelopersList200Response.md  Game.md  GameEsrbRating.md  GamePersonList.md  GamePlatformMetacritic.md  GamePlatformsInner.md  GamePlatformsInnerPlatform.md  GamePlatformsInnerRequirements.md  GameSingle.md  GameStoreFull.md  GamesApi.md  GamesDevelopmentTeamList200Response.md  GamesList200Response.md  GamesScreenshotsList200Response.md  GamesStoresList200Response.md  Genre.md  GenreSingle.md  GenresApi.md  GenresList200Response.md  Movie.md  ParentAchievement.md  Person.md  PersonSingle.md  Platform.md  PlatformParentSingle.md  PlatformSingle.md  PlatformsApi.md  PlatformsList200Response.md  PlatformsListsParentsList200Response.md  Position.md  Publisher.md  PublisherSingle.md  PublishersApi.md  (+13 more)
allq-rawg/src/: lib.rs
allq-rawg/src/apis/: configuration.rs  creator_roles_api.rs  creators_api.rs  developers_api.rs  games_api.rs  genres_api.rs  mod.rs  platforms_api.rs  publishers_api.rs  stores_api.rs  tags_api.rs
allq-rawg/src/models/: creator_roles_list_200_response.rs  creators_list_200_response.rs  developer.rs  developer_single.rs  developers_list_200_response.rs  game.rs  game_esrb_rating.rs  game_person_list.rs  game_platform_metacritic.rs  game_platforms_inner.rs  game_platforms_inner_platform.rs  game_platforms_inner_requirements.rs  game_single.rs  game_store_full.rs  games_development_team_list_200_response.rs  games_list_200_response.rs  games_screenshots_list_200_response.rs  games_stores_list_200_response.rs  genre.rs  genre_single.rs  genres_list_200_response.rs  mod.rs  movie.rs  parent_achievement.rs  person.rs  person_single.rs  platform.rs  platform_parent_single.rs  platform_single.rs  platforms_list_200_response.rs  platforms_lists_parents_list_200_response.rs  position.rs  publisher.rs  publisher_single.rs  publishers_list_200_response.rs  reddit.rs  screen_shot.rs  store.rs  store_single.rs  stores_list_200_response.rs  (+5 more)
allq-wikidata/: Cargo.toml
allq-wikidata/src/: cache.rs  client.rs  externallinks.rs  itemtypes.rs  lib.rs  listproperties.rs  properties.rs  search_provider.rs  smoke.rs  television.rs
data/: properties.json
docs/handbook/: book.toml
docs/handbook/src/: SUMMARY.md
nu_plugin_all_querier/: Cargo.toml  README.md
nu_plugin_all_querier/src/: lib.rs  main.rs
nu_plugin_all_querier/src/commands/: list_providers.rs  mod.rs  query_wikidata.rs  search.rs  search_game.rs
templates/allq-standalone-provider-template/: Cargo.toml  cargo-generate.toml  init.rhai  pre.rhai
templates/allq-standalone-provider-template/src/: lib.rs
