[workspace]
members = [
    "allq-cli",
    "allq-core",
    "allq-musicbrainz",
    "allq-providers",
    "allq-pcgw",
    "allq-query",
    "allq-wikidata",
    "nu_plugin_all_querier"
]
resolver = "3"

[workspace.dependencies.allq-core]
path = "./allq-core"

[workspace.dependencies.allq-pcgw]
path = "./allq-pcgw"

[workspace.dependencies.allq-providers]
path = "./allq-providers"

[workspace.dependencies.allq-query]
path = "./allq-query"

[workspace.dependencies.allq-musicbrainz]
path = "./allq-musicbrainz"

[workspace.dependencies.allq-wikidata]
path = "./allq-wikidata"

[workspace.dependencies.nu_plugin_all_querier]
path = "./nu_plugin_all_querier"

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]

[workspace.dependencies.tokio]
version = "1.52.1"
features = [
    "rt",
    "rt-multi-thread",
    "macros",
]
