[package]
name = "allq-anilist"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
description = "A standalone AllQuerier search provider for AniList"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }

# Common backend/parsing dependencies
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
anilist_moe = "0.3.3"
oauth2 = "5.0.0"
url = "2.5.8"
