[package]
name = "allq-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# shared dependencies for projects in the workspace
allq-anilist = { workspace = true }
allq-core = { workspace = true }
allq-jikan = { workspace = true }
allq-mal = { workspace = true }
allq-musicbrainz = { workspace = true }
allq-pcgw = { workspace = true }
allq-providers = { workspace = true }
allq-rawg = { workspace = true }
allq-wikidata = { workspace = true }
allq-query = { workspace = true, features = ["clap"] }
dotenvy = "0.15.7"
