[package]
name = "allq-core"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
foyer = { version = "0.22.3", features = ["serde"] }
dirs = "6.0.0"
tracing = { workspace = true }
strum = "0.28.0"
strum_macros = "0.28.0"
derive_more = { version = "2.1.1", features = ["from_str"] }


[build-dependencies]
serde = "1"
cargo_toml = "0.22.3"
