[package]
name = "allq-igdb"
version = "0.1.0+4.0.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
description = "All Querier provider for IGDB"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_path_to_error = "0.1.5"
serde_repr = "^0.1"
url = "^2.5"
tracing = { workspace = true }
async-trait = "0.1.89"

allq-core = { workspace = true }
anyhow = "1.0.102"
igdb-atlas = "0.1.1"