[package]
name = "allq-itis"
version = "0.1.0"
edition = "2021"
description = "A standalone AllQuerier search provider for "

[dependencies]
allq-core = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }

# Common backend/parsing dependencies
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "time"] }
