[package]
name = "allq-itis"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
description = "A standalone AllQuerier search provider for ITIS"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }

# Common backend/parsing dependencies
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "time"] }
