[package]
name = "allq-jikan"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
description = "A standalone AllQuerier search provider for Jikan"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }

# Common backend/parsing dependencies
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
jikan_moe = "0.2.5"
either = "1.15.0"
