[package]
name = "allq-musicbrainz"
version = "0.1.0"
edition = "2024"

authors = ["Evan Stoll <evanjsx@gmail.com>"]

[dependencies]
allq-core = { path = "../allq-core" }
musicbrainz_rs = { version = "0.13", features = ["async", "rate_limit"] }
tokio = { workspace = true }
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
