[package]
name = "allq-musicbrainz"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { path = "../allq-core" }
musicbrainz_rs = { version = "0.13", features = ["async", "rate_limit"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde_json = { workspace = true }
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
foyer = { version = "0.22.3", features = ["serde"] }
