[package]
name = "allq-pcgw"
version = "0.1.0"
edition = "2021"
authors = ["<same as other crates>"]

[dependencies]
allq-core = { path = "../allq-core" }
anyhow = "1.0.102"
async-trait = "0.1.89"
reqwest = { version = "0.12.28", features = ["json"] }
serde_json = "1.0.149"
tracing = { workspace = true }
urlencoding = "2"
ammonia = "4.1.2"
tokio = { version = "1", features = ["time"] }
foyer = { version = "0.22.3", features = ["serde"] }