[package]
name = "allq-pcgw"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { path = "../allq-core" }
anyhow = "1.0.102"
async-trait = "0.1.89"
reqwest = { workspace = true }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = { workspace = true }
urlencoding = "2"
ammonia = "4.1.2"
tokio = { version = "1", features = ["time"] }
foyer = { version = "0.22.3", features = ["serde"] }
scraper = "0.27.0"