[package]
name = "allq-pcgw"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { path = "../allq-core" }
anyhow = { workspace = true }
async-trait = "0.1.89"
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"
ammonia = "4.1.2"
tokio = { workspace = true }
foyer = { version = "0.22.3", features = ["serde"] }
scraper = "0.27.0"