[package]
name = "allq-providers"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
allq-itis = { workspace = true }
allq-mal = { workspace = true }
allq-pcgw = { workspace = true }
async-trait = "0.1.86"
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { workspace = true }
reqwest = { version = "0.12.9", features = ["json", "native-tls-alpn"] }
tracing = { workspace = true }