[package]
name = "allq-providers"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { workspace = true }
allq-itis = { workspace = true }
allq-mal = { workspace = true }
allq-pcgw = { workspace = true }
async-trait = "0.1.86"
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }