[package]
name = "allq-query"
version = "0.1.0"
edition = "2024"

[features]
clap = ["dep:clap"]
nu = ["dep:nu-protocol", "dep:nu-plugin"]

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0.149"
allq-providers = { workspace = true }
allq-wikidata = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
nu-protocol = { version = "0.113.1", features = ["plugin"], optional = true }
nu-plugin = { version = "0.113.1", optional = true }