[package]
name = "allq-query"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
clap = ["dep:clap"]
nu = ["dep:nu-protocol", "dep:nu-plugin"]

[dependencies]
anyhow = "1.0.102"
serde_json = { workspace = true }
allq-providers = { workspace = true }
allq-wikidata = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
nu-protocol = { version = "0.113.1", features = ["plugin"], optional = true }
nu-plugin = { version = "0.113.1", optional = true }