[package]
name = "allq-wikidata"
version = "0.1.0"
edition = "2024"

[dependencies]
mediawiki = "0.5.1"
tokio = { workspace = true }
anyhow = "1.0.102"
serde_json = "1.0.149"
foyer = { version = "0.22.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
tracing = "0.1.44"