[package]
name = "allq-wikidata"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
allq-core = { path = "../allq-core" }
mediawiki = "0.5.1"
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde_json = { workspace = true }
foyer = { version = "0.22.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
tracing = { workspace = true }