[package]

name = "nu_plugin_all_querier"
version = "0.1.0+0.112.2"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2021"
description = "a nushell plugin called all_querier"
repository = "https://github.com/evanjs/nu_plugin_all_querier"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.112.2"
nu-protocol = { version = "0.112.2", features = ["plugin"] }
allq-core.workspace = true
allq-musicbrainz.workspace = true
allq-wikidata.workspace = true
allq-pcgw.workspace = true
allq-providers.workspace = true
allq-query.workspace = true
anyhow = "1.0.102"
serde_json = "1.0.149"
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.112.2" }
