[package]

name = "nu_plugin_all_querier"
version = "0.1.0+0.113.1"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2024"
description = "a nushell plugin called all_querier"
repository = "https://github.com/evanjs/nu_plugin_all_querier"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.113.1"
nu-protocol = { version = "0.113.1", features = ["plugin"] }
allq-anilist.workspace = true
allq-core.workspace = true
allq-igdb.workspace = true
allq-itis.workspace = true
allq-jikan.workspace = true
allq-musicbrainz.workspace = true
allq-wikidata.workspace = true
allq-pcgw.workspace = true
allq-mal.workspace = true
allq-providers.workspace = true
allq-query = { workspace = true, features = ["nu"] }
allq-rawg = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
tracing-subscriber.workspace = true
dotenvy = "0.15.7"
tracing.workspace = true

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.113.1" }
