[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
description = "A standalone AllQuerier search provider for {{ provider-name }}"

[dependencies]
allq-core = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }

# Common backend/parsing dependencies
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"