[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
description = "A standalone AllQuerier search provider for {{ provider-name }}"

[dependencies]
allq-core = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }

# Common backend/parsing dependencies
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }